# GitForest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Sprite.h  apidata.json  config.json  main.cpp  saved.json
.github/workflows/: ci.yml  reset-saved-json.yml
external-libraries/pugixml/: pugixml.cpp  pugixml.hpp  pugixmllicense.txt
external-libraries/rapidjson/: document.h  rapidjsonlicense.txt
src/: JsonFileManager.cpp  JsonFileManager.h  Manager.cpp  Manager.h  Sprite.cpp  Sprite.h
tests/: CMakeLists.txt  globals.cpp  globals.h  load_save_json_func_test.cpp  load_save_refresh_json_func_test.cpp  process_func_test.cpp
tests/catch2/: catch_amalgamated.cpp  catch_amalgamated.hpp
